fix rating z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -463,6 +463,7 @@ header {
 }
 
 .star-rating::before {
+  z-index: 110;
   opacity: 0;
 
   content: attr(data-content);
